--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<h2 class="flex grid_body">My activity</h2>
 				</div>
 				<div class="grid_item bgr ex-hrz ex-vrt Inview">
-					<div class="grid grid-sub grid_body" style="background-image: url(./lib/images/meet7.jpeg);">
+					<div class="grid grid-sub grid_body" style="background-image: url(./lib/images/main_2.jpeg);">
 						<div class="grid_item title Inview">
 							<h2 class="flex grid_body">be you</h2>
 						</div>
@@ -136,7 +136,7 @@
 					</a>
 				</div>
 				<div class="grid_item img Inview">
-					<img src="./lib/images/main_2.jpg" class="grid_body">
+					<img src="./lib/images/main_3.jpg" class="grid_body">
 				</div>
 				<div class="grid_item empty ex-hrz Inview">
 					<div class="grid_body"></div>
@@ -159,7 +159,7 @@
 			</main>
 		</div>
 		<footer role="contentinfo" class="inline-center">
-			<p>© 2018~ takekoshi sachi</p>
+			<p>© 2019~ takekoshi sachi</p>
 		</footer>
 	</div>
 	<script type='text/javascript' src='./lib/js/jquery.inview.min.js'></script>
