--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				<div class="grid_item title ex-hrz Inview">
 					<h2 class="flex grid_body">SNS</h2>
 				</div>
-				<div class="grid_item text ex-hrz ex-vrt Inview">
+				<div id="instagram" class="grid_item text ex-hrz ex-vrt Inview">
 					<div class="grid_body">
 						<!-- InstaWidget -->
 						<a href="https://instawidget.net/v/user/happy_official0904" id="link-0e650199d5c034284c2eb3ce4a40abbb35d93144ea94afa660c11857217635c7">@happy_official0904</a>
