--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<div class="grid_item text Inview">
 							<div class="grid grid-1 grid_body">
 								<h2 class="font-xs body_description">cafe</h2>
-								<p>想像が創造されるカフェ、Happy cafe</p>
+								<p>想像が創造されるカフェ<br>Happy cafe</p>
 							</div>
 						</div>
 					</div>
