--- a/company.html
+++ b/company.html
@@ -46,7 +46,8 @@
 								<h1 class="entry-title main_title">Company</h1>
 							</div>
 						</div>
-						<div class="main_card square ex-hrz ex-vrt img"><img src="./lib/images/top_img.jpeg" class="card_body wp-post-image" alt="site concept" srcset="./lib/images/top_img.jpeg 1500w, ./lib/images/top_img-300x184.jpeg 300w, ./lib/images/top_img-768x471.jpeg 768w, ./lib/images/top_img-1024x628.jpeg 1024w" sizes="(max-width: 1500px) 100vw, 1500px" /></div>        <div class="main_card square meta text">
+						<div class="main_card square ex-hrz ex-vrt img"><img src="./lib/images/top_img.jpeg" class="card_body wp-post-image" alt="site concept" srcset="./lib/images/top_img.jpeg 1500w, ./lib/images/top_img-300x184.jpeg 300w, ./lib/images/top_img-768x471.jpeg 768w, ./lib/images/top_img-1024x628.jpeg 1024w" sizes="(max-width: 1500px) 100vw, 1500px" /></div>
+						<div class="main_card square meta text">
 							<span class="vcard author grid grid-1 card_body">
 								<span class="font-xs card_description">author</span>
 								<span class="fn">admin</span>
