--- a/jewelry.html
+++ b/jewelry.html
@@ -94,7 +94,7 @@
 
 
 
-<div class="wp-block-image main_logo"><figure class="aligncenter"><img src="./lib/images/logo_lunedeunivers.png" alt="lunedeunivers logo" class="wp-image-352" srcset="./lib/images/logo_lunedeunivers.png 670w, ./lib/images/logo_lunedeunivers-300x279.png 300w" sizes="(max-width: 670px) 100vw, 670px" /></figure></div>
+<div class="wp-block-image main_logo"><figure class="aligncenter"><img src="./lib/images/logo_lunedeunivers.PNG" alt="lunedeunivers logo" class="wp-image-352" srcset="./lib/images/logo_lunedeunivers.png 670w, ./lib/images/logo_lunedeunivers-300x279.png 300w" sizes="(max-width: 670px) 100vw, 670px" /></figure></div>
 
 
 
