--- a/produce.html
+++ b/produce.html
@@ -42,63 +42,69 @@
 					<div class="grid grid-main">
 						<div class="main_card square ex-hrz ex-vrt title">
 							<div class="grid grid-1 card_body">
-								<div id="breadcrumb" class="cf card_description" itemscope itemtype="http://schema.org/BreadcrumbList"><div class="breadcrumb_item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem"><a href="./index.html" class="breadcrumb_link" itemprop="item"><span itemprop="name">HOME</span></a><meta itemprop="position" content="1" /></div></div>
+								<div id="breadcrumb" class="cf card_description" itemscope itemtype="http://schema.org/BreadcrumbList">
+									<div class="breadcrumb_item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+										<a href="./index.html" class="breadcrumb_link" itemprop="item"><span itemprop="name">HOME</span>
+										</a><meta itemprop="position" content="1" />
+									</div>
+								</div>
 								<h1 class="entry-title main_title">Produce</h1>
-            </div>
-        </div>
-    </div>
-    <div class="entry-content main_content">
-        
-<h2 style="text-align:center">誇りと、自信を。</h2>
+							</div>
+						</div>
+						<div class="main_card square ex-hrz ex-vrt img"><img src="./lib/images/logo_lunedeunivers.PNG" class="card_body wp-post-image" alt="site concept" /></div>
+					</div>
+					<div class="entry-content main_content">
+						
+						<h2 style="text-align:center">誇りと、自信を。</h2>
 
 
 
-<p style="text-align:center">他の誰でもない、自分自身であることに、誇りを自信を<br>そんな想いをカタチにしました</p>
+						<p style="text-align:center">他の誰でもない、自分自身であることに、誇りを自信を<br>そんな想いをカタチにしました</p>
 
 
 
-<div class="wp-block-columns has-2-columns container">
-<div class="wp-block-column">
-<div class="wp-block-cover has-background-dim aligncenter" style="background-image:url(./lib/images/jewelry_top.jpg)"><p class="wp-block-cover-text"><a href="./jewelry.html">JEWELRY<br><br>more</a><br></p></div>
-</div>
+						<div class="wp-block-columns has-2-columns container">
+							<div class="wp-block-column">
+								<div class="wp-block-cover has-background-dim aligncenter" style="background-image:url(./lib/images/jewelry_top.jpg)"><p class="wp-block-cover-text"><a href="./jewelry.html">JEWELRY<br><br>more</a><br></p></div>
+							</div>
 
 
 
-<div class="wp-block-column">
-<div class="wp-block-cover has-background-dim aligncenter" style="background-image:url(./lib/images/logo_lunedeunivers.png)"><p class="wp-block-cover-text">COSMETIC<br><br>coming soon</p></div>
-</div>
-</div>
-    </div>
-</article>
-</main>
+							<div class="wp-block-column">
+								<div class="wp-block-cover has-background-dim aligncenter" style="background-image:url(./lib/images/logo_lunedeunivers.png)"><p class="wp-block-cover-text">COSMETIC<br><br>coming soon</p></div>
+							</div>
+						</div>
+					</div>
+				</article>
+			</main>
 		</div>
-	<footer role="contentinfo" class="container inline-center footer_wrapper">
-		<div id="footerScroller" class="flex ScrollAppear footer_scroller">
-			<span class="footer_arrow"></span>
-		</div>
-		<div class="widget_text widget footer_widget">
-			<div class="textwidget custom-html-widget">
-				<h2 class="footer_title">
-					Follow me
-				</h2>
-				<div class="flex footer_list block">
-					<a href="https://www.instagram.com/happy_official0904/?hl=ja" class="footer_link"><img src="./lib/images/Instagram_logo-1.png" alt="Instagram" class="footer_img"></a>
+		<footer role="contentinfo" class="container inline-center footer_wrapper">
+			<div id="footerScroller" class="flex ScrollAppear footer_scroller">
+				<span class="footer_arrow"></span>
+			</div>
+			<div class="widget_text widget footer_widget">
+				<div class="textwidget custom-html-widget">
+					<h2 class="footer_title">
+						Follow me
+					</h2>
+					<div class="flex footer_list block">
+						<a href="https://www.instagram.com/happy_official0904/?hl=ja" class="footer_link"><img src="./lib/images/Instagram_logo-1.png" alt="Instagram" class="footer_img"></a>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="widget footer_widget">
-			<div class="textwidget">
-				<div class="flex footer_list"><a class="footer_link" href="./privacypolicy.html">PRIVACY POLICY</a></div>
+			<div class="widget footer_widget">
+				<div class="textwidget">
+					<div class="flex footer_list"><a class="footer_link" href="./privacypolicy.html">PRIVACY POLICY</a></div>
+				</div>
 			</div>
-		</div>
-		<div class="widget footer_widget">
-			<div class="textwidget">
-				<p>© 2019~ HappyHoldings</p>
+			<div class="widget footer_widget">
+				<div class="textwidget">
+					<p>© 2019~ HappyHoldings</p>
+				</div>
 			</div>
-		</div>
-	</footer>
-</div>
-<script type='text/javascript' src='./lib/js/jquery.inview.min.js'></script>
-<script type='text/javascript' src='./lib/js/main.js'></script>
+		</footer>
+	</div>
+	<script type='text/javascript' src='./lib/js/jquery.inview.min.js'></script>
+	<script type='text/javascript' src='./lib/js/main.js'></script>
 </body>
 </html>
