--- a/jewelry.html
+++ b/jewelry.html
@@ -94,7 +94,7 @@
 
 
 
-<div class="wp-block-image main_logo"><figure class="aligncenter"><img src="./lib/images/logo_lunedeunivers.PNG" alt="lunedeunivers logo" class="wp-image-352" srcset="logo_lunedeunivers.PNG 670w, logo_lunedeunivers.PNG 300w" sizes="(max-width: 670px) 100vw, 670px" /></figure></div>
+<div class="wp-block-image main_logo"><figure class="aligncenter"><img src="./lib/images/logo_lunedeunivers.PNG" alt="lunedeunivers logo" class="wp-image-352"/></figure></div>
 
 
 
